# TgPostsGuardian

./: .env.example  .gitignore  Dockerfile  Dockerfile.dev  Makefile  docker-compose.base.dev.yml  docker-compose.base.yml  make.bat  pyproject.toml  requirements.txt  setup.sh
app/: settings.py  urls.py  wsgi.py
bot/: __init__.py  admin.py  apps.py  base.py  conversions.py  handlers.py  login.py  models.py  types.py  utils.py
bot/admin/: __init__.py  channel.py  excess.py  limitation.py  log.py  post_check.py  settings.py  stats_views.py  userbot.py  userbot_config.py  userbot_session.py
bot/handlers/: __init__.py  app.py  main.py
bot/migrations/: 0001_initial.py  0002_alter_limitation_end_date_and_more.py  0002_limitation_views_restricted_for_deletion_and_more.py  0002_rename_limitation_views_difference_for_deletion_and_more.py  0003_channel_delete_posts_after_days_and_more.py  0003_settings_userbots_chat_invite_alter_limitation_views_and_more.py  0003_userbot_ping_time.py  0004_alter_log_type.py  0004_limitation_views_difference_for_deletion_interval_and_more.py  0004_log_dummy.py  0005_channel_history_days.py  0005_remove_limitation_allowed_languages_and_more.py  0005_remove_log_dummy_log_comment_excess.py  0006_channel_owner_log_error_message_log_reason_and_more.py  0006_remove_limitation_no_end_date_and_more.py  0006_userbot_channels.py  0007_log_post_views.py  0008_remove_channel_allowed_languages_and_more.py
bot/models/: __init__.py  channel.py  choices.py  excess.py  limitation.py  log.py  post_check.py  settings.py  stats_views.py  userbot.py  (+2 more)
(+18 files in other folders)
